data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3781.wast
;; 10. **Test Description**: Make a `br_table` instruction where the fall-through default case is missing a valid target, resulting in unintended execution paths. Check differential handling.     - **Specific Constraint**: Proper default case handling when index targets are invalid or missing.     - **Relation to `call**`: Similar scenarios in `call` where missing or invalid function indices need proper fallthrough handling to the default error condition.

(assert_invalid
  (module
    (func (param i32)
      (block $default
        (br_table $default (i32.const 0))
      )
    )
  )
  "undefined target in br_table"
)